Implemented many fixes